--- a/index.ipynb
+++ b/index.ipynb
@@ -35,26 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A=\n",
-      " [[1402  191]\n",
+      "[[1402  191]\n",
       " [1371  821]\n",
       " [ 949 1437]\n",
       " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
+      "[[1 2 3]\n",
       " [4 5 6]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "import numpy as np\n",
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437],[147, 1448] ])\n",
+    "B = np.array([[1,2,3], [4,5,6]])\n",
+    "print(A)\n",
+    "print(B)"
    ]
   },
   {
@@ -66,20 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of A: (4, 2)\n",
-      "Shape of B: (2, 3)\n"
+      "Shape of A:  (4, 2)\n",
+      "Shape of B:  (2, 3)\n"
      ]
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print('Shape of A: ', A.shape)\n",
+    "print('Shape of B: ', B.shape)"
    ]
   },
   {
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +115,11 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])"
    ]
   },
   {
@@ -124,27 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before random data:\n",
-      " [[0. 0. 0.]\n",
+      "[[0. 0. 0.]\n",
       " [0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
-      "\n",
-      "after random data:\n",
-      " [[2. 7. 5.]\n",
-      " [7. 9. 3.]\n",
-      " [6. 5. 9.]]\n"
+      "[[7. 6. 0.]\n",
+      " [1. 9. 0.]\n",
+      " [0. 0. 0.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "C = np.zeros((3,3))\n",
+    "print(C)\n",
+    "for i in range(0,2):\n",
+    "    for j in range(0,2):\n",
+    "        C[i,j] = np.random.randint(10)\n",
+    "print(C)"
    ]
   },
   {
@@ -159,24 +171,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
+      "Final Output: \n",
+      " [[25. 21.  8.  0.]\n",
+      " [ 0.  8. 12.  0.]\n",
+      " [ 4.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "\n",
+    "def rand():\n",
+    "    import numpy as np\n",
+    "    A = np.zeros((4,4))\n",
+    "    B = np.zeros((4,4))\n",
+    "    for i in range(0,3):\n",
+    "        for j in range(0,3):\n",
+    "            A[i,j] = np.random.randint(10)\n",
+    "            B[i,j] = np.random.randint(10)\n",
+    "    result = A*B\n",
+    "    print(\"Final Output:\", '\\n', result)\n",
+    "rand()"
    ]
   },
   {
@@ -205,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
